Fixed text wrap on header

--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,7 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  white-space: nowrap;
 }
 
 .header-baseline {
